Adicionado descrição de itens abaixo do header @maeda

--- a/index.html
+++ b/index.html
@@ -41,18 +41,7 @@
         <div class="col-xl-9 mx-auto">
           <h1 class="mb-5">Estamos juntos nessa corrida contra o tempo em busca de respiradores</h1>
         </div>
-        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <form>
-            <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Coloque seu email aqui...">
-              </div>
-              <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Me avise!</button>
-              </div>
-            </div>
-          </form>
-        </div>
+
       </div>
     </div>
   </header>
@@ -64,28 +53,28 @@
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-screen-desktop m-auto text-primary"></i>
+              <i class="fas fa-laptop  m-auto text-primary"></i>
             </div>
-            <h3>Fully Responsive</h3>
-            <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+            <h3>Material Reciclável</h3>
+            <p class="lead mb-0">Produzido a partir de lixo tecnológico e material reciclável, o que reduz o custo de fabricação.</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-layers m-auto text-primary"></i>
+              <i class="fas fa-user-md m-auto text-primary"></i>
             </div>
-            <h3>Bootstrap 4 Ready</h3>
-            <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+            <h3>Auxílio Médico</h3>
+            <p class="lead mb-0">Desenvolvido em parceria com médicos no Brasil pensando nas necessidades dos hospitais.</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-check m-auto text-primary"></i>
+              <i class="fas fa-globe-americas m-auto text-primary"></i>
             </div>
-            <h3>Easy to Use</h3>
-            <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+            <h3>Acesso Universal</h3>
+            <p class="lead mb-0">Código e projeto com acesso aberto e irrestrito para que todos tenham acesso ao projeto.</p>
           </div>
         </div>
       </div>
