--- a/index.html
+++ b/index.html
@@ -41,7 +41,18 @@
         <div class="col-xl-9 mx-auto">
           <h1 class="mb-5">Estamos juntos nessa corrida contra o tempo em busca de respiradores</h1>
         </div>
-
+        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+<!--          <form>-->
+<!--            <div class="form-row">-->
+<!--              <div class="col-12 col-md-9 mb-2 mb-md-0">-->
+<!--                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">-->
+<!--              </div>-->
+              <div class="col-12">
+                <button type="submit" class="btn btn-block btn-lg btn-info">Apoie</button>
+              </div>
+<!--            </div>-->
+<!--          </form>-->
+        </div>
       </div>
     </div>
   </header>
@@ -56,7 +67,7 @@
               <i class="fas fa-laptop  m-auto text-primary"></i>
             </div>
             <h3>Material Reciclável</h3>
-            <p class="lead mb-0">Produzido a partir de lixo tecnológico e material reciclável, o que reduz o custo de fabricação.</p>
+            <p class="lead mb-0">Respirador produzido a partir de lixo tecnológico com custo baixo de fabricação.</p>
           </div>
         </div>
         <div class="col-lg-4">
@@ -88,21 +99,21 @@
 
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Fully Responsive Design</h2>
+          <h2>Problema Sanitário Global</h2>
           <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <h2>Updated For Bootstrap 4</h2>
+          <h2>Alternativa de Baixo Custo</h2>
           <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Easy to Use &amp; Customize</h2>
+          <h2>Trabalho Multidisciplinar</h2>
           <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
         </div>
       </div>
@@ -145,16 +156,16 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h2 class="mb-4">Ready to get started? Sign up now!</h2>
+          <h2 class="mb-4">Fique por dentro!</h2>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
             <div class="form-row">
               <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
+                <input type="email" class="form-control form-control-lg" placeholder="Coloque aqui seu email..">
               </div>
               <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
+                <button type="submit" class="btn btn-block btn-lg btn-primary">Assinar</button>
               </div>
             </div>
           </form>
