--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <!-- Testimonials -->
   <section class="testimonials text-center bg-light">
     <div class="container">
-      <h2 class="mb-5">What people are saying...</h2>
+      <h2 class="mb-5">Protótipo</h2>
       <div class="row">
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
@@ -156,16 +156,42 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h2 class="mb-4">Fique por dentro!</h2>
+          <h2 class="section-subheading">Contato</h2>
+          <h3 class="section-subheading">Conte para nós qual é a sua dúvida.</h3>
         </div>
-        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <form>
-            <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Coloque aqui seu email..">
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <form name="sentMessage" id="contactForm" action="https://formspree.io/contato@voxsil.com.br" method="POST">
+            <input type="hidden" name="_language" value="pt" />
+            <input type="text" name="_gotcha" style="display:none" />
+            <input type="hidden" name="_format" value="plain" />
+            <input type="hidden" name="_subject" value="Formulário de contato" />
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <input type="text" name="name" class="form-control" placeholder="Nome *" id="name" required data-validation-required-message="Por favor, digite seu nome">
+                  <p class="help-block text-danger"></p>
+                </div>
+                <div class="form-group">
+                  <input type="email" name="_replyto" class="form-control" placeholder="Email *" id="email" required data-validation-required-message="Por favor, digite seu email">
+                  <p class="help-block text-danger"></p>
+                </div>
+                <div class="form-group">
+                  <input type="tel" class="form-control" placeholder="Telefone" id="phone">
+                  <p class="help-block text-danger"></p>
+                </div>
               </div>
-              <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Assinar</button>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <textarea class="form-control" name="message" placeholder="Mensagem *" rows="6" id="message" required data-validation-required-message="Por favor, digite a mensagem."></textarea>
+                  <p class="help-block text-danger"></p>
+                </div>
+              </div>
+              <div class="clearfix"></div>
+              <div class="col-lg-12 text-center">
+                <div id="success"></div>
+                <button type="submit" value="send" class="btn btn-xl btn-primary">Enviar email</button>
               </div>
             </div>
           </form>
