Vakinha e remoção do rodapé @maeda

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <!--                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">-->
 <!--              </div>-->
               <div class="col-12">
-                <button type="submit" class="btn btn-block btn-lg btn-info">Apoie</button>
+                <a href="http://vaka.me/1030887"  class="btn btn-block btn-lg btn-info" target="_blank">Vaquinha</a>
               </div>
 <!--            </div>-->
 <!--          </form>-->
@@ -124,28 +124,10 @@
   <section class="testimonials text-center bg-light">
     <div class="container">
       <h2 class="mb-5">Protótipo</h2>
+      <p class="lead text-left">Construído numa maratona de programação, o Respirador de Baixo Custo oferece regulagens de frequência e vazão de ar. Em breve será liberado as instruções e lista de materiais para a produção do produto. </p>
+      <p class="lead text-left">Enquando isso, confira aqui o vídeo do aparelho em funcionamento:</p>
       <div class="row">
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-            <h5>Margaret E.</h5>
-            <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-            <h5>Fred S.</h5>
-            <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-            <h5>Sarah W.</h5>
-            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
-          </div>
-        </div>
+        <iframe width="100%" height="500px" src="https://www.youtube.com/embed/JjHMXVxiWTc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
   </section>
@@ -156,8 +138,8 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h2 class="section-subheading">Contato</h2>
-          <h3 class="section-subheading">Conte para nós qual é a sua dúvida.</h3>
+          <h2 class="section-subheading">Fale Conosco</h2>
+          <h3 class="section-subheading">Ajude nessa luta contra o corona vírus.</h3>
         </div>
       </div>
       <div class="row">
@@ -201,51 +183,51 @@
   </section>
 
   <!-- Footer -->
-  <footer class="footer bg-light">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-          <ul class="list-inline mb-2">
-            <li class="list-inline-item">
-              <a href="#">About</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Contact</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Terms of Use</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
-            </li>
-          </ul>
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2019. All Rights Reserved.</p>
-        </div>
-        <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
-          <ul class="list-inline mb-0">
-            <li class="list-inline-item mr-3">
-              <a href="#">
-                <i class="fab fa-facebook fa-2x fa-fw"></i>
-              </a>
-            </li>
-            <li class="list-inline-item mr-3">
-              <a href="#">
-                <i class="fab fa-twitter-square fa-2x fa-fw"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-instagram fa-2x fa-fw"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </footer>
+<!--  <footer class="footer bg-light">-->
+<!--    <div class="container">-->
+<!--      <div class="row">-->
+<!--        <div class="col-lg-6 h-100 text-center text-lg-left my-auto">-->
+<!--          <ul class="list-inline mb-2">-->
+<!--            <li class="list-inline-item">-->
+<!--              <a href="#">About</a>-->
+<!--            </li>-->
+<!--            <li class="list-inline-item">&sdot;</li>-->
+<!--            <li class="list-inline-item">-->
+<!--              <a href="#">Contact</a>-->
+<!--            </li>-->
+<!--            <li class="list-inline-item">&sdot;</li>-->
+<!--            <li class="list-inline-item">-->
+<!--              <a href="#">Terms of Use</a>-->
+<!--            </li>-->
+<!--            <li class="list-inline-item">&sdot;</li>-->
+<!--            <li class="list-inline-item">-->
+<!--              <a href="#">Privacy Policy</a>-->
+<!--            </li>-->
+<!--          </ul>-->
+<!--          <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2019. All Rights Reserved.</p>-->
+<!--        </div>-->
+<!--        <div class="col-lg-6 h-100 text-center text-lg-right my-auto">-->
+<!--          <ul class="list-inline mb-0">-->
+<!--            <li class="list-inline-item mr-3">-->
+<!--              <a href="#">-->
+<!--                <i class="fab fa-facebook fa-2x fa-fw"></i>-->
+<!--              </a>-->
+<!--            </li>-->
+<!--            <li class="list-inline-item mr-3">-->
+<!--              <a href="#">-->
+<!--                <i class="fab fa-twitter-square fa-2x fa-fw"></i>-->
+<!--              </a>-->
+<!--            </li>-->
+<!--            <li class="list-inline-item">-->
+<!--              <a href="#">-->
+<!--                <i class="fab fa-instagram fa-2x fa-fw"></i>-->
+<!--              </a>-->
+<!--            </li>-->
+<!--          </ul>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </footer>-->
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
