Alterado texto do botao de contribuir @maeda

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <!--                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">-->
 <!--              </div>-->
               <div class="col-12">
-                <a href="http://vaka.me/1030887"  class="btn btn-block btn-lg btn-info" target="_blank">Vaquinha</a>
+                <a href="http://vaka.me/1030887" class="btn btn-block btn-lg btn-success" target="_blank">$ Contribuir</a>
               </div>
 <!--            </div>-->
 <!--          </form>-->
