--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </div>
       <div class="row">
         <div class="col-lg-12">
-          <form name="sentMessage" id="contactForm" action="https://formspree.io/contato@voxsil.com.br" method="POST">
+          <form name="sentMessage" id="contactForm" action="https://formspree.io/myynyego" method="POST">
             <input type="hidden" name="_language" value="pt" />
             <input type="text" name="_gotcha" style="display:none" />
             <input type="hidden" name="_format" value="plain" />
