Adicionado texto de descrição das seções @maeda

--- a/index.html
+++ b/index.html
@@ -100,21 +100,27 @@
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Problema Sanitário Global</h2>
-          <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+          <p class="lead mb-0">Estamos enfrentando a maior crise sanitária desse século. Já são dezenas de milhares de casos confirmados no Brasil e milhares de mortos, falta de leitos nas UTIs dos hospitais
+          e aparelhos para suporte ventilatório.
+          </p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
           <h2>Alternativa de Baixo Custo</h2>
-          <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+          <p class="lead mb-0">Os respiradores utilizados nos casos mais graves custam caro e atualmente estão escassos no mercado. Não é por menos, pois essa é uma pandemia que afetaou diretamente
+          a maioria dos países do globo. Uma alterativa de baixo custo para produção de respiradores utilizando material abundante e acessível se tornou uma possibilidade.
+          </p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Trabalho Multidisciplinar</h2>
-          <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+          <p class="lead mb-0">Com base na possibilidade de produção de respiradores utilizando materiais oriundos do descarte de eletrônicos, uma equipe multidisciplinar de profissionais se juntou para criar uma alternativa
+            barata e de fácil produção.
+          </p>
         </div>
       </div>
     </div>
