Ajustando texto da seção alternativa de baixo custo @maeda

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="col-lg-6 my-auto showcase-text">
           <h2>Alternativa de Baixo Custo</h2>
           <p class="lead mb-0">Os respiradores utilizados nos casos mais graves custam caro e atualmente estão escassos no mercado. Não é por menos, pois essa é uma pandemia que afetaou diretamente
-          a maioria dos países do globo. Uma alterativa de baixo custo para produção de respiradores utilizando material abundante e acessível se tornou uma possibilidade.
+          a maioria dos países do globo. Uma alterativa de baixo custo para produção de respiradores foi criada utilizando residuos eletrônicos, material abundante, acessível e de baixo custo.
           </p>
         </div>
       </div>
