Adjustado texto da seção Trabalho Multidisciplinar @maeda

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Trabalho Multidisciplinar</h2>
-          <p class="lead mb-0">Com base na possibilidade de produção de respiradores utilizando materiais oriundos do descarte de eletrônicos, uma equipe multidisciplinar de profissionais se juntou para criar uma alternativa
-            barata e de fácil produção.
+          <p class="lead mb-0">Com base na possibilidade de produção de respiradores utilizando materiais oriundos do descarte de eletrônicos, uma equipe multidisciplinar de profissionais se uniou para criar uma alternativa
+            barata e de fácil produção em um desafio de 24 horas.
           </p>
         </div>
       </div>
