Ajustes finais de texto @maeda

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <section class="testimonials text-center bg-light">
     <div class="container">
       <h2 class="mb-5">Protótipo</h2>
-      <p class="lead text-left">Construído numa maratona de programação, o Respirador de Baixo Custo oferece regulagens de frequência e vazão de ar. Em breve será liberado as instruções e lista de materiais para a produção do produto. </p>
+      <p class="lead text-left">Construído numa maratona de programação, o Respirador de Baixo Custo oferece regulagens de frequência respiratória e controle volumétrico de oxigênio. Em breve serão disponibilizadas as instruções, lista de materiais e códigos-fonte para qualquer interessado em reproduzir ou melhorar o produto. </p>
       <p class="lead text-left">Enquando isso, confira aqui o vídeo do aparelho em funcionamento:</p>
       <div class="row">
         <iframe width="100%" height="500px" src="https://www.youtube.com/embed/JjHMXVxiWTc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
